tests/baselines/reference/parserMemberAccessorDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration1.ts(2,7): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration1.ts (1 errors) ====
    class C {
      get a() { }
          ~
!!! error TS2378: A 'get' accessor must return a value.
    }